--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
-          <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=qpdErR-jBxJa-KkHCK5dGaxyL3rr73rcfICDKJlM99w"></script>
+          <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qpdErR-jBxJa-KkHCK5dGaxyL3rr73rcfICDKJlM99w&cl=ffffff&w=a"></script>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
