Update ClustrMaps script source URL

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
-          <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qpdErR-jBxJa-KkHCK5dGaxyL3rr73rcfICDKJlM99w&cl=ffffff&w=a"></script>
+          <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&t=n&d=qpdErR-jBxJa-KkHCK5dGaxyL3rr73rcfICDKJlM99w&cmo=fa9191&cmn=80f080'></script>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
