--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               
               <br>
               <strong>Zhengyan Wan*</strong>,
-              Yidong Ouyang*, Liyan Xie, Fang Fang, Hongyuan Zha, Guang Cheng
+              Yidong Ouyang*, Liyan Xie, Fang Fang, Hongyuan Zha, Guang Cheng (*:Equal Contribution)
               <br>
 
               
