--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <p style="text-align:center">
                 <name>Zhengyan Wan</name>
               </p>
-              <p>I am a Master's student at the School of Statistics in East China Normal University, where I was fortunate to be advised by <a href="https://faculty.ecnu.edu.cn/_s35/ff2_en/main.psp">Prof. Fang Fang</a>. Previously, I received my bachelor's degree in statistics at the School of Mathematics in Jilin University. I am mainly interested in generative models, deep learning theory and high-dimensional statistics.
+              <p>I am a Master's student at the School of Statistics in East China Normal University, where I am fortunate to be advised by <a href="https://faculty.ecnu.edu.cn/_s35/ff2_en/main.psp">Prof. Fang Fang</a>. Previously, I received my bachelor's degree in statistics at the School of Mathematics in Jilin University. I am mainly interested in generative models, deep learning theory and high-dimensional statistics.
               </p>
               <p style="text-align:center">
                 <a href="zhengyanwan066@gmail.com">Email</a> &nbsp/&nbsp
@@ -72,7 +72,7 @@
               
               <br>
               <strong>Zhengyan Wan*</strong>,
-              Yidong Ouyang*, Liyan Xie, Fang Fang, Hongyuan Zha, Guang Cheng (*:Equal Contribution)
+              Yidong Ouyang*, Liyan Xie, Fang Fang, Hongyuan Zha, Guang Cheng (*: Equal Contribution)
               <br>
 
               
