--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <br>
               <a href="https://arxiv.org/abs/2509.21906">arxiv</a> 
               <p></p>
-              <p> We derive the KL divergence of two path measures regarding two continuous-time Markov chains (CTMCs) with different transition rates by developing a novel Girsanov-type theorem, and provide a comprehensive analysis that encompasses the error arising from transition rate estimation and early stopping. </p>
+              <p> We derive the KL divergence of two path measures regarding two continuous-time Markov chains (CTMCs) with different transition rates by developing a Girsanov-type theorem, and provide a comprehensive analysis that encompasses the error arising from transition rate estimation and early stopping. </p>
              </td>
             </tr> 
           
