--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <a href="zhengyanwan066@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/ZhengyanWan_CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://github.com/WanZhengyan">Github</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=Cja7WkYAAAAJ&hl">Google Scholar</a>
               </p>
             </td>
           </tr>
